# Ruspanol

./: .gitignore  adminfo  common.py  database.py  espanol.db  keyboards.py  main.py  pyproject.toml  requirements.txt  secrets  strings.py  word_parse.py
data/: config.py  core.py  custom_types.py  database.py  espanol.db  queries.py  ruspanol.db  schemas.py  wrapper.py
data/models/: dictionary_model.py  phrase_model.py  user_model.py
data/queries/: dictionary.py  phrases.py  user.py  user_gpt.py  user_history.py
domain/: __init__.py  assistant.py  commands.py  dictionary.py  filters.py  free_speech.py  other.py  pagination.py  phrases.py  sections.py  settings.py  translation_and_speak.py
domain/admin/: callback_models.py  commands.py  keyboards.py
domain/basic/: basic.py  core.py  quiz.py  user_sections.py  words.py  words_voice.py
domain/dictionary/: common.py  dictionary_ikb.py  dictionary_test.py  user_dictionary.py
domain/filters/: filters.py
domain/fixme/: quiz.py  words.py  words_voice.py
domain/keyboards/: constants.py  dictionary_ikb.py  keyboards.py  phrases_ikb.py
domain/shemas/: schemas_dto.py  user_model_dto.py
domain/user_section/: callback_data.py  edit_user_section.py  fsm_states.py  keyboards.py  user_section_quiz.py  user_sections.py
domain/utils/: common.py  settings.py
migrations/: env.py
migrations/versions/: 40fea013ebca_.py  (+2 more)
resources/: strings.py
speech_api/: speech_to_text.py  text_to_speech.py
text_generation/: chat_hist.py  chat_wrapper.py  dialogue_model.py  text_gen_model.py
text_to_speech/: voice_request.py
(+2 files in other folders)
