[tool.poetry]
name = "ruspanol"
version = "0.1.0"
description = ""
authors = ["Loopeq <arsen.00z11@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.5.0"
g4f = "^0.3.0.7"
nest-asyncio = "^1.6.0"
requests = "^2.31.0"
alembic = "^1.13.1"
aiosqlite = "^0.20.0"
pydantic-settings = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
